--- a/index.html
+++ b/index.html
@@ -65,40 +65,42 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
-  <section id="services" class="max-w-6xl mx-auto px-4 py-20">
-    <h2 class="text-3xl md:text-4xl font-black">Services</h2>
-    <p class="mt-2 text-neutral-300 max-w-2xl">Pick what you need or bundle for better value. We keep files organized and delivery fast.</p>
-    <div class="mt-10 grid md:grid-cols-3 gap-6">
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="font-bold text-xl">Custom Apparel Graphics</h3>
-        <p class="mt-2 text-neutral-300">Original designs for tees, hoodies, hats. Print-ready AI/PSD + PNG exports.</p>
-        <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Concept to final artwork</li>
-          <li>2–3 concepts + 2 revisions</li>
-          <li>Mockups included</li>
-        </ul>
-      </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="font-bold text-xl">Ad Creatives (IG/TikTok)</h3>
-        <p class="mt-2 text-neutral-300">Feed, Story, Reel ads designed to convert. Static + short motion.</p>
-        <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Hook-focused headlines</li>
-          <li>Multiple aspect ratios</li>
-          <li>Export pack for Ads Manager</li>
-        </ul>
-      </div>
-      <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <h3 class="font-bold text-xl">Mockups & Template Packs</h3>
-        <p class="mt-2 text-neutral-300">Reusable PSD/Canva templates + storefront mockups for fast drops.</p>
-        <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
-          <li>Hoodie/tee/cap mockups</li>
-          <li>Promo story templates</li>
-          <li>Etsy/Shopify thumbnails</li>
-        </ul>
-      </div>
+<!-- SERVICES -->
+<section id="services" class="max-w-6xl mx-auto px-4 py-20">
+  <h2 class="text-3xl md:text-4xl font-black">Services</h2>
+  <p class="mt-2 text-neutral-300 max-w-2xl">
+    We specialize in bold visuals and ad-ready assets that elevate your brand.
+  </p>
+
+  <div class="mt-10 grid md:grid-cols-2 gap-6">
+    <!-- Designs -->
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+      <h3 class="font-bold text-xl">Designs</h3>
+      <p class="mt-2 text-neutral-300">
+        Apparel graphics, posters, and bold artwork tailored to your brand’s identity.
+      </p>
+      <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
+        <li>Unique, custom visuals</li>
+        <li>2–3 design concepts + revisions</li>
+        <li>Print-ready files + mockups</li>
+      </ul>
     </div>
-  </section>
+
+    <!-- Ad Creatives -->
+    <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
+      <h3 class="font-bold text-xl">Ad Creatives</h3>
+      <p class="mt-2 text-neutral-300">
+        High-performing Instagram/TikTok visuals designed to grab attention and convert.
+      </p>
+      <ul class="mt-4 space-y-2 text-sm text-neutral-300 list-disc list-inside">
+        <li>Static and short-form video ads</li>
+        <li>Optimized for Reels, Stories, and Feeds</li>
+        <li>Export packs ready for Ads Manager</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
   <!-- PORTFOLIO -->
   <section id="portfolio" class="max-w-6xl mx-auto px-4 pb-6">
