--- a/index.html
+++ b/index.html
@@ -254,21 +254,9 @@
         </div>
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
-        <form action="mailto:modamarkets313@gmail.com" method="post" enctype="text/plain" class="space-y-4">
-          <div>
-            <label class="block text-sm text-neutral-300">Name</label>
-            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="text" name="name" placeholder="Your name">
-          </div>
-          <div>
-            <label class="block text-sm text-neutral-300">Email</label>
-            <input required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10" type="email" name="email" placeholder="you@example.com">
-          </div>
-          <div>
-            <label class="block text-sm text-neutral-300">Project brief</label>
-            <textarea required class="w-full mt-1 px-3 py-2 rounded-xl bg-neutral-800 border border-white/10 h-32" name="brief" placeholder="Tell us about your design/ad needs..."></textarea>
-          </div>
-          <button class="px-4 py-2 rounded-xl bg-indigo-500 hover:bg-indigo-600 font-semibold" type="submit">Send</button>
-        </form>
+       <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?usp=dialog" target="_blank" class="underline">Open Google Form</a>
+       <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true"
+        width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
   </section>
