--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
       </div>
       <div class="p-6 rounded-2xl border border-white/10 bg-neutral-900/40">
        <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?usp=dialog" target="_blank" class="underline">Open Google Form</a>
-       <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true"
-        width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScU1Rmc18VK_gwqHpP79nmRCN7cMfupi6pDfbBK7aVQbDa7fg/viewform?embedded=true" width="640" height="1283" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </div>
   </section>
