--- a/index.html
+++ b/index.html
@@ -164,22 +164,20 @@
     </div>
 
     <!-- Image Ads -->
-    <div class="mt-12">
-      <h3 class="text-2xl font-bold">Image Ads</h3>
-      <p class="text-neutral-400 text-sm mt-1">Single-frame promos for feeds and stories.</p>
-      <div class="mt-4 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="rounded-2xl overflow-hidden border border-dashed border-white/10 bg-neutral-900/40 grid place-items-center h-64 text-neutral-500 text-sm">
-          Add image ad (e.g., <code>ad-still-01.jpg</code>)
-        </div>
-        <div class="rounded-2xl overflow-hidden border border-dashed border-white/10 bg-neutral-900/40 grid place-items-center h-64 text-neutral-500 text-sm">
-          Add image ad
-        </div>
-        <div class="rounded-2xl overflow-hidden border border-dashed border-white/10 bg-neutral-900/40 grid place-items-center h-64 text-neutral-500 text-sm">
-          Add image ad
-        </div>
+  <div class="mt-10">
+    <h3 class="text-2xl font-bold mb-4">Image Ads</h3>
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-64 object-cover" src="./imagead1.png" alt="Image Ad 1" loading="lazy" decoding="async">
+        <div class="p-3 text-sm">Image Ad 1</div>
+      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900/40">
+        <img class="w-full h-64 object-cover" src="./imagead2.png" alt="Image Ad 2" loading="lazy" decoding="async">
+        <div class="p-3 text-sm">Image Ad 2</div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- DESIGNS -->
   <section id="designs" class="max-w-6xl mx-auto px-4 pb-6">
